# circuitX-

./: .gitignore  CONTRACT_ADDRESSES_STATUS.md  LAUNCH_GUIDE.md  README.md  SOLANA_LAUNCH_GUIDE.md  VERCEL_BUILD_FIXES.md  deploy_devnet.sh
app-solana/: next.config.ts  package-lock.json  package.json
app-solana/app/: layout.tsx  page.tsx
app-solana/components/: WalletContextProvider.tsx
app-solana/hooks/: useMagicBlock.ts
app-solana/lib/: anchor_client.ts  arcium_client.ts  idl.json  magicblock_client.ts  types.ts
arcium/: Arcium.toml  Cargo.toml
arcium/encrypted-ixs/: Cargo.toml
arcium/encrypted-ixs/src/: lib.rs  matching_engine.rs  order_book.rs
arcium/src/: funding.rs  lib.rs
arcium/src/oracle/: mod.rs
docs/: ARCHITECTURE.md  BALANCE_SYSTEM_EXPLANATION.md  HACKATHON_SUBMISSION.md  PNL.md  PRIVATE_LOGIC.md  SMART_CONTRACT.md  SUBMISSION_FORM_RESPONSE.md  VERIFIER_OVERVIEW.md  WEB_APP.md
quickstart/: CIRCUIT_CONTRACT_ALIGNMENT.md  CIRCUIT_NEXT_STEPS.md  CLASS_HASHES.md  CONFIGURE.md  DEPLOYMENT_ORDER.md  FIX_SCARB_PATH.md  INSTALL_SCARB.md  PRIVACY_CONFIRMATION.md  PRIVACY_FIXES_APPLIED.md  PRIVACY_FIX_PLAN.md  PRIVACY_SUMMARY.md  fix-asdf-path.sh  verify-setup.sh
quickstart/admin/: DEPLOY_CORRECT_ORDER.md  DEPLOY_NOW.md  REDEPLOY_STEPS.md  REDEPLOY_WITHOUT_ROLES.md  REDEPLOY_WITH_NEW_VERIFIER.md  grant-position-handler-role.js
quickstart/app/: FAUCET_README.md  (+5 more)
solana/: Anchor.toml  package-lock.json
yusd-token/: .gitignore  CLASS_HASH_EXPLAINED.md  CREATE_ACCOUNT.md  DEPLOY.md  DEPLOYED.md  MINT.md  README.md  Scarb.toml  snfoundry.toml
(+130 files in other folders)
