[package]
name = "perpl-arcium"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18"
anchor-lang = "0.30.1"
# Simulated Arcium dependencies since we don't have the real crate source
# arcium-mxe = { version = "0.1", optional = true } 
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5.0"
